--- a/Style.css
+++ b/Style.css
@@ -96,14 +96,14 @@ section {
 .swiper-button-next,
 .swiper-button-prev {
     display: none;
-    color: #333; /* Change to visible if needed */
-    background-color: transparent; /* No background */
-    border: none; /* No borders */
-    font-size: 16px; /* Make the arrows smaller */
-    width: 24px; /* Adjust width */
-    height: 24px; /* Adjust height */
-    position: absolute; /* Keep them positioned relative to the carousel */
-    bottom: 10px; /* Move closer to the bottom of the carousel */
+    /* color: #333; /* Change to visible if needed */
+   /* background-color: transparent; /* No background */
+    /*border: none; /* No borders */
+    /*font-size: 16px; /* Make the arrows smaller */
+    /*width: 24px; /* Adjust width */
+    /*height: 24px; /* Adjust height */
+    /*position: absolute; /* Keep them positioned relative to the carousel */
+   /* bottom: 10px; /* Move closer to the bottom of the carousel */
 }
 
 .swiper-button-next {
