--- a/Style.css
+++ b/Style.css
@@ -1,6 +1,6 @@
 /* General Styles */
 body {
-    align-text: center;
+    text-align: center;
     font-family: Arial, sans-serif;
     margin: 0;
     padding: 0;
