--- a/Style.css
+++ b/Style.css
@@ -97,15 +97,16 @@ section {
 .swiper-button-next,
 .swiper-button-prev {
     display: none;
-    /* color: #333; /* Change to visible if needed */
-   /* background-color: transparent; /* No background */
-    /*border: none; /* No borders */
-    /*font-size: 16px; /* Make the arrows smaller */
-    /*width: 24px; /* Adjust width */
-    /*height: 24px; /* Adjust height */
-    /*position: absolute; /* Keep them positioned relative to the carousel */
-   /* bottom: 10px; /* Move closer to the bottom of the carousel */
+    color: transparent; /* Make the arrows transparent */
+    background-color: transparent; /* Ensure no background color */
+    border: none; /* Remove any borders */
 }
+
+.swiper-button-next:hover,
+.swiper-button-prev:hover {
+    color: transparent;
+}
+
 
 
 /* Contact Section */
